# meshcore-api

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  PLAN.md  README.md  SCHEMAS.md  docker-compose.yml  pyproject.toml  requirements.txt  test_webhooks.py
.github/workflows/: docker-build.yml
examples/: README.md  ipnet.json
scripts/: dump_message_payloads.py
src/meshcore_api/: __init__.py  __main__.py  cli.py  config.py  constants.py  query.py  tag_importer.py
src/meshcore_api/api/: app.py  dependencies.py  schemas.py
src/meshcore_api/api/routes/: advertisements.py  commands.py  health.py  messages.py  nodes.py  signal_measurements.py  signal_strength.py  tags.py  telemetry.py  trace_paths.py
src/meshcore_api/config/: __init__.py  base.py  mcp.py  server.py
src/meshcore_api/database/: __init__.py  cleanup.py  engine.py  models.py
src/meshcore_api/mcp/: __init__.py  client.py  config.py  server.py  state.py
src/meshcore_api/mcp/tools/: __init__.py  advertisements.py  messages.py
src/meshcore_api/meshcore/: __init__.py  interface.py  mock.py  real.py  scenarios.py
src/meshcore_api/queue/: __init__.py  debouncer.py  manager.py  models.py  rate_limiter.py
src/meshcore_api/subscriber/: event_handler.py  metrics.py  metrics_updater.py
src/meshcore_api/utils/: __init__.py  address.py  logging.py
src/meshcore_api/webhook/: __init__.py  handler.py  models.py
src/meshcore_sidekick/: __init__.py  __main__.py  config.py  constants.py  main.py  query.py
src/meshcore_sidekick/api/: __init__.py  app.py  schemas.py
src/meshcore_sidekick/api/routes/: commands.py  nodes.py  statistics.py  tags.py  telemetry.py  trace_paths.py
src/meshcore_sidekick/database/: __init__.py  engine.py  models.py
src/meshcore_sidekick/meshcore/: __init__.py  interface.py  mock.py  real.py
src/meshcore_sidekick/subscriber/: __init__.py  event_handler.py  metrics.py
src/meshcore_sidekick/utils/: __init__.py  address.py  logging.py
tests/: __init__.py  conftest.py
tests/fixtures/: invalid_tags.json  sample_events.json  sample_tags.json
tests/unit/: test_address_utils.py  test_api_schemas.py  test_config.py  test_constants.py  test_database_cleanup.py  test_database_engine.py  test_debouncer.py  test_metrics.py  test_mock_meshcore.py  test_queue_manager.py  test_queue_models.py  test_rate_limiter.py  test_signal_strength.py  test_webhook_handler.py
